sql/test/unit/checks/simple_fail.exp
--no rows
^
|
 ----- ERROR
Error: line 1, character 0:
Constraint failed
